<resources>
    <string name="app_name">LorryVision</string>
    <string name="app_version">Version</string>


    <!-- Notifications -->
    <string name="notif_net_found_content_title">LorryVision: network detected</string>
    <string name="notif_net_found_content_text">Click to go to the app</string>



    <!-- Connect dialog -->
    <string name="connect_dialog_title">Connecting to</string>



    <!-- MainActivity -->
    <!-- Drawer -->
    <string name="drawer_item_home">Home</string>

    <string name="drawer_item_instruction">User instruction</string>
    <string name="drawer_item_about">About the app</string>
    <string name="drawer_item_license">License agreement</string>
    <string name="drawer_item_settings">Settings</string>

    <string name="drawer_item_website">Website</string>
    <string name="drawer_item_feedback">Feedback</string>

    <string name="drawer_open">Drawer is opened</string>
    <string name="drawer_close">Drawer is closed</string>

    <!-- Toolbar -->
    <string name="toolbar_popup" />

    <string name="toolbar_popup_about">About</string>
    <string name="toolbar_popup_instruction">Instruction</string>
    <string name="toolbar_popup_settings">Settings</string>

    <!-- Nets -->
    <string name="netList_checkbox_autoconnect">Autoconnect to net</string>
    <string name="netList_button_updateNets">UPDATE NETS LIST</string>
    <string name="netList_button_updateNets_auto">AUTOUPDATING NETS LIST</string>
    <string name="netList_button_updateNets_lorries">LORRY NETS DETECTED</string>
    <string name="netList_item_textView_netId">&lt;unknown network&gt;</string>
    <string name="netList_item_imageView_type">Type of network</string>
    <string name="netList_item_imageView_signal">Signal strength</string>
    <string name="netList_item_imageView_was_detached">Net was detached</string>
    <string name="netList_item_background">Background color</string>

    <string name="toast_enabling_wifi">Enabling Wi-Fi service…</string>
    <string name="toast_connection_ok">Connection successful</string>
    <string name="toast_connection_failed">Connection failed</string>


    <!-- VideoActivity -->
    <string name="activity_video">Camera translation</string>
    <string name="activity_video_webView_translation">Translation viewer</string>
    <string name="activity_video_button_disconnect">DISCONNECT</string>



    <!-- InstructionActivity -->
    <string name="activity_instruction">Instruction</string>
    <string name="activity_instruction_textview">
        Instruction here\n<!--
        -->Stub
    </string>



    <!-- AboutActivity -->
    <string name="activity_about">About</string>
    <string name="activity_about_textview">
        Application info here\n<!--
        -->Stub
    </string>



    <!-- LicenseActivity -->
    <string name="activity_license">License agreement</string>
    <string name="activity_license_textview">
        License here\n<!--
        -->Stub
    </string>



    <!-- SettingsActivity -->
    <string name="activity_settings">Settings</string>
    <string name="toolbar_popup_default_settings">Reset to default</string>


    <string name="pref_group_wifi">Wi-Fi settings</string>

    <string name="pref_group_wifi_autoconnect_title">Autoconnect to net</string>
    <string name="pref_group_wifi_autoconnect_summary">
        Connect to the detected LorryVision network automatically
    </string>

    <string name="pref_group_wifi_autoupdate_title">Autoupdate networks</string>
    <string name="pref_group_wifi_autoupdate_summary">
        Update the networks list automatically
    </string>

    <string name="pref_group_wifi_display_general_title">Display general Wi-Fi networks</string>
    <string name="pref_group_wifi_display_general_summary">
        Display general Wi-Fi networks in the networks list
    </string>


    <string name="pref_group_notif">Notifications settings</string>

    <string name="pref_group_notif_sound_title">Sound and vibration</string>
    <string name="pref_group_notif_sound_summary">
        Enable sound and vibration notifications when LorryVision network detected
    </string>

    <string name="pref_group_notif_netfound_title">Send notification when net detected</string>
    <string name="pref_group_notif_netfound_summary">
        Send notification when LorryVision network detected if the app is minimized
    </string>

    <string name="pref_group_notif_jump_title">Jump to the app when net detected</string>
    <string name="pref_group_notif_jump_summary">
        Jump to the app when LorryVision network detected if the app is minimized
    </string>


    <string name="pref_group_general">General settings</string>

    <string name="pref_group_general_language_title">Language</string>
    <string name="pref_group_general_language_summary">

    </string>



    <!-- FeedbackActivity -->
    <string name="activity_feedback">Feedback</string>

    <string name="activity_feedback_toolbar_send">Send</string>

    <string name="activity_feedback_email_hint">Enter your e-mail here…</string>
    <string name="activity_feedback_subject_hint">Enter message subject here…</string>

    <string name="activity_feedback_radioButton_idea">Idea</string>
    <string name="activity_feedback_radioButton_bug">Bug</string>
    <string name="activity_feedback_radioButton_question">Question</string>

    <string name="activity_feedback_msg_hint">Enter your message here…</string>


</resources>
