<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/netList_item_background"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/netList_item_background"
        app:srcCompat="@drawable/selection"/>

    <ImageView
        android:id="@+id/netList_imageView_typeOfNet"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/netList_item_imageView_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_type_wifi" />

    <TextView
        android:id="@+id/netList_textView_netId"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:gravity="fill_vertical"
        android:singleLine="true"
        android:text="@string/netList_item_textView_netId"
        android:textAlignment="gravity"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/netList_imageView_typeOfNet"
        app:layout_constraintEnd_toStartOf="@+id/netList_imageView_was_detached"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/netList_imageView_was_detached"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/netList_item_imageView_was_detached"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/netList_imageView_signal"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_net_was_detached" />

    <ImageView
        android:id="@+id/netList_imageView_signal"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/netList_item_imageView_signal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_wifi_0" />


</android.support.constraint.ConstraintLayout>