<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="name.marinchenko.lorryvision.view.activities.web.FeedbackActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_feedback_toolbar"
        style="@style/Toolbar" />

    <EditText
        android:id="@+id/activity_feedback_editText_msg"
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/activity_feedback_msg_hint"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:gravity="start"
        app:layout_constraintBottom_toTopOf="@+id/activity_feedback_radioGroup_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_feedback_toolbar"
        android:maxLength="400" />

    <RadioGroup
        android:id="@+id/activity_feedback_radioGroup_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_feedback_editText_email"
        android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/activity_feedback_radioButton_idea"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:text="@string/activity_feedback_radioButton_idea"
                android:textSize="20sp"
                android:checked="true" />

            <RadioButton
                android:id="@+id/activity_feedback_radioButton_bug"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.34"
                android:text="@string/activity_feedback_radioButton_bug"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/activity_feedback_radioButton_question"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:text="@string/activity_feedback_radioButton_question"
                android:textSize="20sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/activity_feedback_editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/activity_feedback_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_feedback_button_send" />

    <Button
        android:id="@+id/activity_feedback_button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/activity_feedback_button_send"
        android:textSize="26sp"
        android:onClick="onButtonSendClick" />



</android.support.constraint.ConstraintLayout>
